<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.ace-design</groupId>
    <artifactId>jpipe</artifactId>

    <inceptionYear>2023</inceptionYear>

    <!-- Versioning convention: YYYY.term, 1 = Winter, 2 = Summer, 3 = Fall -->
    <version>2025.1</version>

    <organization>
        <name>McMaster Centre for Software Certification (McSCert)</name>
        <url>https://www.mcscert.ca</url>
    </organization>


    <properties>
        <jar.filename>jpipe</jar.filename>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Antlr configuration -->
        <antlr4.visitor>true</antlr4.visitor>
        <antlr4.listener>true</antlr4.listener>
        <!-- Controlling tests execution (default value) -->
        <skip.tests.unit>false</skip.tests.unit>
        <skip.tests.integration>false</skip.tests.integration>
        <!-- Should use latest LTS version -->
        <maven.compiler.release>21</maven.compiler.release>
        <!-- Sonar code quality analysis (requires a SONAR_TOKEN env variable)  -->
        <sonar.organization>ace-design</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    </properties>

    <developers>
        <developer>
            <id>seb</id>
            <name>Sébastien Mosser</name>
            <email>mossers@mcmaster.ca</email>
            <url>https://mosser.github.io</url>
            <organization>McMaster University (McScert)</organization>
            <organizationUrl>https://www.eng.mcmaster.ca/cas/</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>America/Toronto</timezone>
        </developer>
        <developer>
            <id>nirmal</id>
            <name>Nirmal Chaudhari</name>
            <email>chaudn12@mcmaster.ca</email>
            <url>https://www.linkedin.com/in/nirmal2003/</url>
            <organization>McMaster University (McSCert)</organization>
            <organizationUrl>https://www.eng.mcmaster.ca/cas/</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>America/Toronto</timezone>
        </developer>
    </developers>

    <dependencies>
        <!-- Core dependencies -->
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.13.1</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.7.0</version>
        </dependency>
        <dependency>
            <groupId>guru.nidi</groupId>
            <artifactId>graphviz-java</artifactId>
            <version>0.18.1</version>
        </dependency>
        <!-- Tests dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <!-- Log plugins -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.23.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.23.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>2.23.1</version>
        </dependency>
        <!-- JSON export library -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20250107</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${jar.filename}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>ca.mcscert.jpipe.Main</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>4.13.1</version>
                <configuration>
                    <arguments>
                        <argument>-package</argument>
                        <argument>ca.mcscert.jpipe.syntax</argument>
                    </arguments>
                </configuration>
                <executions>
                    <execution>
                        <id>antlr</id>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <!-- invoke with -Dskip.tests.units to skip unit tests -->
                    <skipTests>${skip.tests.unit}</skipTests>
                    <trimStackTrace>true</trimStackTrace>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <!-- invoke with -Dskip.tests.integration to skip unit tests -->
                    <skipTests>${skip.tests.integration}</skipTests>
                    <trimStackTrace>true</trimStackTrace>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.coderplus.maven.plugins</groupId>
                <artifactId>copy-rename-maven-plugin</artifactId>
                <version>1.0.1</version>
                <executions>
                    <execution>
                        <id>rename-file</id>
                        <phase>install</phase>
                        <goals>
                            <goal>rename</goal>
                        </goals>
                        <configuration>
                            <sourceFile>${project.build.directory}/${project.artifactId}-jar-with-dependencies.jar</sourceFile>
                            <destinationFile>${jar.filename}.jar</destinationFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.4.0</version>
                <dependencies>
                    <!-- Need to update Checkstyle to support annotations in the source code -->
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>10.14.1</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <sourceDirectories>
                        <!-- To avoid checking ANTLR4 code generation -->
                        <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                    </sourceDirectories>
                    <configLocation>google_checks.xml</configLocation>
                    <suppressionsLocation>${project.resources[0].directory}/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
                    <consoleOutput>false</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <violationSeverity>warning</violationSeverity>
                    <failOnViolation>true</failOnViolation>
                    <linkXRef>true</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>install</id>
                        <phase>install</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>